# sb-metrics

./: .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  client.go  collector.go  collector_test.go  go.mod  go.sum  main.go
client/: BUILD.bazel  client.go  client_test.go
testdata/: BUILD.bazel  status-down.html
