load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

# gazelle:prefix github.com/chalko/sb-metrics
gazelle(name = "gazelle")

go_library(
    name = "sb-metrics_lib",
    srcs = ["main.go"],
    importpath = "github.com/chalko/sb-metrics",
    visibility = ["//visibility:private"],
    deps = [
        "//client",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promhttp:go_default_library",
    ],
)

go_binary(
    name = "sb-metrics",
    embed = [":sb-metrics_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "cmm",
    binary = ":sb-metrics",
)

load("@io_bazel_rules_docker//container:container.bzl", "container_push")

container_push(
    name = "push-cmm",
    image = ":cmm",
    format = "Docker",
    registry = "index.docker.io",
    repository = "chalko/cmm",
    tag = "latest",
)
