load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = ["client.go"],
    importpath = "github.com/chalko/sb-metrics/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_puerkitobio_goquery//:go_default_library",
    ],
)

go_test(
    name = "client_test",
    srcs = ["client_test.go"],
    data = [
        "//testdata:index.html",
        "//testdata:status-down.html",
    ],
    embed = [":client"],
    importpath = "github.com/chalko/sb-metrics/client",
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
